# AutoCanvasPainter

./: CMakeLists.txt  README.md  bindings.cpp  brush_engine.cpp  brush_engine.h  brushstroke_natural.py  create_test_image.py  image_processing.cpp  image_processing.h  main.cpp  painter.cpp  painter.h  requirements.txt
